# filespot

./: .gitignore  CMakeLists.txt  LICENSE.md
include/filespot/: Asset.h  AssetManager.h  File.h  Ifstream.h
include/spot/file/: asset.h  file.h  ifstream.h
src/: Asset.cpp  AssetManager.cpp  File.cpp  Ifstream.cpp  asset.cpp  file.cpp  ifstream.cpp
test/: Tests.cmake  fst-test.cpp  test.txt
